tests/test2/fail/fail-moreThanOneTypeInMat.m2
int main(){
	matrix int [2][1] a;
	a = [[1];
		[1.2]];
	return 0;
}